<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="version">1155</string>

    <!-- Title for Latin keyboard  -->
    <string name="ime_name">Interfrisian Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_en_GB">English</string>
    <string name="label_subtype_de_DE">Deutsch</string>
    <string name="label_subtype_nl_NL">Nederlands</string>
    <string name="label_subtype_da_DA">Dansk</string>

    <string name="label_subtype_fy_FRY">Frysk (Westfrysk)</string>

    <string name="label_subtype_frs_FRS">Oostfräisk (Oostfräisk)</string>
    <string name="label_subtype_gos_GOS">Grunnegs (Oostvrais)</string>
    <string name="label_subtype_stq_STQ">Seeltersk (Aastfräisk)</string>

    <string name="label_subtype_frr_SÖL">Sölring (Nuurđfriisk)</string>
    <string name="label_subtype_frr_FER">Fering (Nuurdfresk)</string>
    <string name="label_subtype_frr_ÖÖM">Öömrang (Nuurdfresk)</string>
    <string name="label_subtype_frr_HAL">Halunder (Noorfriisk)</string>
    <string name="label_subtype_frr_WIR">Wiringhiirder (Nordfreesk)</string>
    <string name="label_subtype_frr_MOO">Mooring (Nordfrasch)</string>
    <string name="label_subtype_frr_KAR">Karhiirder (Noordfräisch)</string>
    <string name="label_subtype_frr_GOO">Gooshiirder (Noordfräisch)</string>
    <string name="label_subtype_frr_HFR">Halifreesk (Nöördfreesk)</string>

    <string name="label_subtype_ofs_OFS">Aldfresisk (Aldfresisk)</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">Interfrisian Keyboard</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>
    <string name="installdic">Install dictionary</string>
</resources>
